--- a/mc/public/manifest.json
+++ b/mc/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Movie Comparer",
+  "name": "An easy way to compare films cast",
   "icons": [
     {
       "src": "favicon.ico",
