--- a/static/package.json
+++ b/static/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.4",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.5"
   },
