--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,7 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
       - "80:80"
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
