Add a basic script to download and load the db into redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,3 +28,10 @@ services:
     image: redis
     ports:
       - "6379:6379"
+  tmdbidexporter:
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./tmdbidexporter
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
