Move files to a new folder and update paths

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,10 @@ services:
     volumes:
       - /app/node_modules
       - ./static:/app
-  back:
+  backend:
     build:
       dockerfile: Dockerfile.dev
-      context: .
+      context: ./backend
     ports:
       - "8080:8080"
     environment:
