Remove logic from the API responses and rearrange the code

--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -5,6 +5,6 @@ RUN update-ca-certificates
 
 WORKDIR /app/
 
-COPY ./main.go .
+COPY ./*.go .
 
-CMD ["go", "run", "main.go"]
+CMD ["go", "run", "*.go"]
